--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "tgs.com.mvvm"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,7 @@ android {
     dexOptions {
         jumboMode true
     }
+    //因为用了rxjava和rxjava2冲突
     packagingOptions {
         exclude 'LICENSE.txt'
         exclude 'META-INF/rxjava.properties'
@@ -63,8 +64,8 @@ dependencies {
     compile 'pub.devrel:easypermissions:0.4.2'
     //内存泄漏
     //    compile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    // 下拉刷新，虽然这个库也有点问题。。但是不推荐使用XRecyvlerView，bug多。
-    compile 'cn.bingoogolapple:bga-refreshlayout:1.1.7@aar'
+    // 下拉刷新
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.2-alpha-6'
     //fastjson比Gson好用点
     compile 'com.alibaba:fastjson:1.2.31'
     //屏幕适配
