--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.31'
     //屏幕适配
     compile 'com.zhy:autolayout:1.4.5'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    //圆形头像
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
