--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,18 +48,26 @@ dependencies {
     compile 'com.facebook.fresco:fresco:1.1.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    //log  为什么不用logger，因为我没有找到去边框的方法，边框占用位置太大，不舒服
+    //log 
     compile 'com.apkfuns.logutils:library:1.5.1.1'
+    
     //rx
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
-    compile 'lib.gorden.rxbus2:rxbus:2.0.1'
     compile 'io.reactivex:rxjava:1.2.10'
+//    compile 'io.reactivex:rxandroid:1.2.1'
+//    compile 'com.hwangjr.rxbus:rxbus:1.0.5'
+    
+    //rx2
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+    compile 'lib.gorden.rxbus2:rxbus:2.0.1'
+    
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
     compile 'org.ligboy.retrofit2:converter-fastjson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+//    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    
     //权限
     compile 'pub.devrel:easypermissions:0.4.2'
     //内存泄漏
