--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'//lambda要加这个
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "tgs.com.mvvm"
         minSdkVersion 17
@@ -26,7 +26,7 @@ android {
     dataBinding {
         enabled true
     }
-    //lib方法数量过多加上这个避免报错,基本用fresco就得加，这库贼大
+    //lib方法数量过多加上这个避免报错
     dexOptions {
         jumboMode true
     }
@@ -50,24 +50,20 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     //log 
     compile 'com.apkfuns.logutils:library:1.5.1.1'
-    
     //rx
     compile 'io.reactivex:rxjava:1.2.10'
-//    compile 'io.reactivex:rxandroid:1.2.1'
-//    compile 'com.hwangjr.rxbus:rxbus:1.0.5'
-    
+    //    compile 'io.reactivex:rxandroid:1.2.1'
+    //    compile 'com.hwangjr.rxbus:rxbus:1.0.5'
     //rx2
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     compile 'lib.gorden.rxbus2:rxbus:2.0.1'
-    
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-scalars:2.2.0'
     compile 'org.ligboy.retrofit2:converter-fastjson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
-//    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    
+    //    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     //权限
     compile 'pub.devrel:easypermissions:0.4.2'
     //内存泄漏
@@ -83,4 +79,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     //fragment
     compile 'me.yokeyword:fragmentation:1.1.0'
+    //使用provided而不是compile，是编译时使用，但不打包到apk中.http://www.jianshu.com/p/268fb94e858d.
+    provided  'org.projectlombok:lombok:1.16.18'
+    //轮播广告
+    compile 'com.youth.banner:banner:1.4.9'
 }
