--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,12 +45,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.facebook.fresco:fresco:1.1.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     //log 
     compile 'com.apkfuns.logutils:library:1.5.1.1'
-    //rx
+    //rxjava1
     compile 'io.reactivex:rxjava:1.2.10'
     //    compile 'io.reactivex:rxandroid:1.2.1'
     //    compile 'com.hwangjr.rxbus:rxbus:1.0.5'
@@ -70,11 +71,10 @@ dependencies {
     //    compile 'com.squareup.leakcanary:leakcanary-android:1.5'
     // 下拉刷新
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.2-alpha-6'
-    //fastjson比Gson好用点
+    //fastjson比Gson好用，速度也更快.
     compile 'com.alibaba:fastjson:1.2.31'
     //屏幕适配
     compile 'com.zhy:autolayout:1.4.5'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
     //圆形头像
     compile 'de.hdodenhof:circleimageview:2.1.0'
     //fragment
