--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,12 @@ dependencies {
     //圆形头像
     compile 'de.hdodenhof:circleimageview:2.1.0'
     //fragment
-    compile 'me.yokeyword:fragmentation:1.1.0'
+    compile 'me.yokeyword:fragmentation:1.1.3'
     //使用provided而不是compile，是编译时使用，但不打包到apk中.http://www.jianshu.com/p/268fb94e858d.
     provided  'org.projectlombok:lombok:1.16.18'
     //轮播广告
     compile 'com.youth.banner:banner:1.4.9'
+    //状态栏
+//    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    compile 'com.gyf.barlibrary:barlibrary:2.2.9'
 }
